fix(breadcrumb): increase line height for readability on wrapped content
When browser screen is narrowed and the breadcrumb gets in two lines there is no enough vertical space between them.

--- a/src/definitions/collections/breadcrumb.less
+++ b/src/definitions/collections/breadcrumb.less
@@ -23,7 +23,7 @@
 *******************************/
 
 .ui.breadcrumb {
-  line-height: 1;
+  line-height: @lineHeight;
   display: @display;
   margin: @verticalMargin 0;
   vertical-align: @verticalAlign;
